# tldw_chatbook

./: .gitignore  .pypirc.example  .pypirc.template  AGENTS.md  Analysis-Improvements.md  CCP-Refactor-24.md  CCP_REFACTORING_PLAN.md  CHANGELOG.md  CHECK_KEYBOARD_SHORTCUTS.md  CHUNKING-REPORT.md  CLAUDE.md  COMMIT_MESSAGE.md  CONVERSATION_SUMMARY.md  CSS-MODULAR.md  CSS_MIGRATION_GUIDE.md  CSS_MODULARIZATION_PLAN.md  Chat-Artifacts-UX.md  Chat-Save-States-1.md  Chat-State-Preservation-Summary.md  Chat-UI-1.md  Chat-UI-ACTUAL-IMPROVEMENT.md  Chat-UX-8.md  Chat-UX-Implementation-Plan.md  Chat-redux.md  Chat-v99-Implementation-Summary.md  Chatbook-Unified-MCP-PRD.md  Code-Gen-1.md  Config-FIXES.md  DESIGN.md  Diarization-Implementation-Summary.md  Diarization-Improve-1.md  EMBEDDINGS_GUIDE.md  EMBEDDING_MERGE.md  EVAL-IMPLEMENTATION-SUMMARY.md  EVAL-PLAN-3.md  EVALS_SYSTEM_REFERENCE.md  EVALUATION-DOCS-README.md  EVALUATION-SYSTEM.md  EVALUATIONS-FINAL-STATUS.md  EVALUATIONS-QUICKSTART.md  (+330 more)
.claude/: settings.local.json
.github/scripts/: generate_test_summary.py
.github/workflows/: CROSS_PLATFORM_FIXES.md  backlog-guard.yml  css-bundle-guard.yml  python-app.yml  test.yml
.impeccable/: design.json
.superpowers/sdd/: progress.md  startup-perf-report.md  task-285-p2-report.md
Docs/: CHUNKING-IMPLEMENTATION-SUMMARY.md  CHUNKING-IMPROVE-1.md  Code-Plan-5.md  Embeddings-UX-1.md  Embeds-UX-3.md  Evals-Improve-3.md  FFMPEG_SETUP.md  Higgs-ADR-002-Backend-Registration.md  Higgs-ADR-004-Voice-Profile-Management.md  Higgs-Audio-TTS-Guide.md  Product_Roadmap.md  Speech-Recording-1.md  Theme-Editor-Horizontal-Layout-Summary.md  app_modularization_analysis.md  evaluation_system.md  rag_search_modes.md
Docs/Design/: 2026-07-16-performance-audit.md  2026-07-17-css-split-investigation.md  Architecture_and_Design.md  Chunking_Architecture.md  Chunking_Documentation_Index.md  Chunking_Implementation_Details.md  Chunking_Use_Cases.md  Improvments.md  MCP.md  OTel-Metrics.md  Packaging.md  Plots.md  SQL-Encryption-1.md  SplashScreens.md  Textual-Layouts.md  agentic-terminal-visual-system.md  chatbook-workbench-ui-system.md  destination-layout-image-reference-prompts.md  master-shell-design-system-contract.md  master-shell-route-inventory.md  mcp-hub-phase2-ux-inputs.md  mcp-hub-phase3-ux-inputs.md  mcp-hub-phase5-ux-inputs.md  metrics_analysis_chunking_db.md
Docs/Development/: CHUNKING-IMPLEMENTATION-COMPLETE.md  CHUNKING-INTEROP-LIBRARY.md  CHUNKING-UI-IMPLEMENTATION-SUMMARY.md  Chat-Dictionaries-UI-Implementation.md  Chat-Tabs-Fixes-Summary.md  Chat-Tabs-Issues.md  Chat_Button_CSS_Guide.md  Create-Embeds-99.md  Developer_Guide.md  EMBEDDINGS_DOWNLOAD_FIX.md  EMBEDDINGS_FD_FIX_SUMMARY.md  EMBEDDINGS_FIX_SUMMARY.md  EMBEDDINGS_GUIDE.md  EVALS-UI-COMPLETION-SUMMARY.md  EVALUATION-DOCS-README.md  EVALUATION-SYSTEM.md  EVALUATION-TASK-FORMATS.md  EVALUATIONS-STATUS.md  EVAL_METRICS_SUMMARY.md  Embeddings-Implementation.md  Embeddings-Improve-4.md  Embeddings-UI.md  Embeddings-Windows-Implementation-Guide.md  Evals-Scratch-1.md  Evals-Window-Implementation-Guide.md  Higgs-ADR-001-Backend-Architecture.md  Ingest-UI-Implementation-Summary.md  Kokoro_TTS_Setup.md  Logits-Add-1.md  Mind-Map-Viewer-1.md  NewIngestWindow-Extension-Guide.md  Onboarding_Guide.md  PARAKEET_IMPLEMENTATION_SUMMARY.md  PARAKEET_TRANSCRIPTION.md  Performance-Profiling-Report.md  RAG-DESIGN.md  SPLASH_SCREEN_GUIDE.md  STARTUP_METRICS_SUMMARY.md  Sidebar-Unification-1.md  TTS-Implementation-Summary.md  (+38 more)
Docs/Examples/: SPLASH_SCREENS_CATALOG.md  SPLASH_SCREEN_QUICK_REF.md
Docs/Features/: ChatDictionaries-Documented.md  SUBSCRIPTION_IMPLEMENTATION_PLAN.md  Speech-Services-Guide.md  TRANSCRIPTION.md  TRANSCRIPTION_PROVIDERS.md  TTS-To-Do.md  World-Lore-Books-Documented.md  notes_bidirectional_sync.md
Docs/Parity/: 2026-04-19-capability-matrix.md  2026-04-19-data-compatibility-map.md  2026-04-19-hermes-ux-gap-memo.md  2026-04-19-rollout-backlog.md  2026-04-21-capability-matrix.md  2026-04-21-execution-roadmap.md  2026-04-21-gap-ledger.md  2026-04-21-target-state-design.md
Helper_Scripts/: copy_rag_pipelines_to_user_config.py  fixed_auto_review.py  mass_ingest.py  migrate_config_encryption.py
Helper_Scripts/Chat_Dictionaries/: sample_chat_dictionary.md
Packaging/: MANIFEST.in  PACKAGING_CHECKLIST.md  PYPI_RELEASE.md  README.md  build_dist.sh  build_release.sh  check_manifest.py  clean.sh
Tests/: README.md  README_TEST_RUNNER.md  TEST_BEST_PRACTICES.md  TEST_COVERAGE_REPORT.md  TEST_RESULTS_SUMMARY.md  TEST_UTILITIES_README.md  TEXTUAL_TESTING_GUIDE.md  api_test_utilities.py  conftest.py  conftest_chatbooks.py  datetime_test_utils.py  db_test_utilities.py  find_call_from_thread.py  generate_coverage.py  run_all_tests_with_report.py  run_new_tests.py  run_quick_tests.py  test_autosave.py  test_chat_v99.py  test_config_app_config_encryption.py  test_config_console_defaults.py  test_config_delete_settings.py  test_config_library_defaults.py  test_config_model_catalog_defaults.py  test_embeddings_datatable_fix.py  test_enhanced_filepicker.py  test_enhanced_rag.py  test_fts5_pattern.py  test_jsoncanvas_handler.py  test_minimal_world_book.py  test_model_capabilities.py  test_readme.md  test_refactored_app_unit.py  test_requirements.txt  test_smoke.py  test_splash_fullscreen.py  test_utilities.py  test_websearch_config.py  textual_test_harness.py  textual_test_utils.py
Tests/Audio/: __init__.py  (+5 more)
backlog/: config.yml
config_examples/: rag_v2_example.toml
examples/: creative_writing_dictionary.md  diarization_example.py  higgs_audio_demo.py  kokoro_voice_blends_example.json  local_file_ingestion_example.py  parakeet_transcription_example.py  professional_chat_dictionary.md  rag_search_mode_config.toml  scifi_worldbook.json
sample_evaluation_tasks/: README.md
scripts/: install_higgs.bat  install_higgs.sh  verify_higgs_installation.py
tldw_chatbook/: Constants.py  Logging_Config.py  __init__.py  __main__.py  app.py  app_refactored.py  app_refactored_v2.py  cli.py  config.py  config_image_addition.py  model_capabilities.py
(+4521 files in other folders)
